add contact form

--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -2,7 +2,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form name="contact" method="post" action="/submit-success/" netlify>
+                <form name="contact" action="/_/submit-success/" netlify>
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
