--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -2,7 +2,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form name="contact" action="/_/submit-success/" netlify>
+                <form name="contact" action="/_/submit-success/" netlify data-netlify-recaptcha="true">
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
@@ -15,6 +15,7 @@
                         <label for="message">Message</label>
                         <textarea name="message" id="message" rows="6"></textarea>
                     </div>
+                    <div class="field" data-netlify-recaptcha="true"></div>
                     <ul class="actions">
                         <li><input type="submit" value="{{ .Site.Params.Contact.buttonSend }}" class="special" /></li>
                         <li><input type="reset" value="{{ .Site.Params.Contact.buttonClear }}" /></li>
