--- a/themes/forty/static/sass/components/_image.scss
+++ b/themes/forty/static/sass/components/_image.scss
@@ -60,3 +60,15 @@
 			}
 		}
 	}
+
+	.float--left {
+		float: left;
+		margin: 0 1.5em 1.25em 0;
+		top: 0.25em;
+	}
+
+	.float--right {
+		float: right;
+		margin: 0 0 1.25em 1.5em;
+		top: 0.25em;
+	}
