--- a/themes/forty/static/sass/main.scss
+++ b/themes/forty/static/sass/main.scss
@@ -58,6 +58,7 @@
 	@import 'components/section';
 	@import 'components/form';
 	@import 'components/box';
+	@import 'components/divider';
 	@import 'components/icon';
 	@import 'components/image';
 	@import 'components/list';
