improve structual design

--- a/themes/forty/layouts/partials/footer.html
+++ b/themes/forty/layouts/partials/footer.html
@@ -11,7 +11,7 @@
                 {{ range .Site.Params.Footer.quicklinks}}
                 <li>{{ .text }} <a href="{{ .url | safeHTML }}">{{ .alt }}</a></li>
                 {{ end }}
-                <li> <a href="https://www.netlify.com">This site is powered by Netlify</a></li>
+<!--                <li> <a href="https://www.netlify.com">This site is powered by Netlify</a></li>-->
             </ul>
         </div>
     </footer>
