--- a/themes/forty/static/sass/components/_button.scss
+++ b/themes/forty/static/sass/components/_button.scss
@@ -127,6 +127,7 @@
 			border-bottom: none;
 			display: block;
 			height: calc(max(15vw, 96px));
+			width: 100%;
 			line-height: calc(max(15vw, 96px));
 			font-size: calc(36px + (32 - 18) * ((100vw - 300px) / (1600 - 300)));
 			background: rgb(80, 84, 200);
@@ -144,12 +145,14 @@
 		}
 
 		&.donate:hover {
-			text-shadow: 0 0 5px rgba(0, 0, 0, 1), 0 0 10px rgba(0, 0, 0, 1);
 			box-shadow: 0 0 30px rgb(80, 84, 200);
+			text-shadow: 0 0 20px rgba(0, 0, 0, 1), 0 0 35px rgba(0, 0, 0, 1);
 			filter: saturate(0.75);
 		}
 
 		&.donate:active {
+			box-shadow: 0 0 10px rgba(80, 84, 200, .8);
+			text-shadow: 0 0 10px rgba(0, 0, 0, 1), 0 0 25px rgba(0, 0, 0, 1);
 			filter: saturate(0.95);
 		}
 
@@ -162,7 +165,7 @@
 			transition: all 475ms cubic-bezier(0.25, 1, 0.5, 1);
 			letter-spacing: 0;
 			position: absolute;
-			right: -0.6em;
+			right: -0.4em;
 			bottom: -3px;
 			transform: scaleX(0.8);
 			transform-origin: left center;
@@ -172,6 +175,12 @@
 			opacity: 1;
 			text-shadow: 0 0 5px rgba(0, 0, 0, 1);
 			transform: scaleX(1) scaleY(1.1);
+		}
+
+		&.donate:active::after {
+			opacity: 1;
+			text-shadow: 0 0 3px rgba(0, 0, 0, .9);
+			transform: scaleX(1.2) scaleY(1.1);
 		}
 
 		&.disabled,
